# healthcare-noshow-analytics

./: .gitignore  README.md  analytics.py  build.py  features.py  model.py  pyproject.toml  requirements.txt  run.bat
app/: __init__.py  dashboard.py  theme.py
data/: scored_appointments.parquet  warehouse.duckdb
ingest/: __init__.py  config.py  generate_data.py  load.py
tests/: test_features.py
